case study tweaks

--- a/booking.html
+++ b/booking.html
@@ -111,20 +111,22 @@
 				<div class="space"></div>
 
 				<h3>Outcome</h3>
-				<p>The new workflow is set to be released on Nov 1. We expect the new flow to improve booking rates, increase visibility, and shorten consultation times.
+				<p>The new workflow was released on Nov 1. We expect the new flow to improve booking rates, increase visibility, and shorten consultation times.
 				</p>
 
 		</div>
 
+		<h2>High-level process</h2>
+		<ul>
+			<li>Research: shadowing, manager interviews, baseline survey to evaluate satisfaction</li>
+			<li>Scoping: defined goals + success metrics of the project and collaborated with eng, product, and legal team to define the data requirements</li>
+			<li>Design: low-fi user flows (established a new contract generation pattern), mid-fi prototypes, final design</li>
+			<li>Release: QA testing, training internal users, monitoring for feedback & issues</li>
+		</ul>
 
-		<div class="full-width-mid-page">
-			<div class="panel dark" style="text-align: center; background-color: white;">
-				<h2 style="padding-top: 100px; color: black">High-level process</h2>
-				<img class="pic-left" src="pics/booking/process.png">
-			</div>
-		</div>
+		<div class="space"></div>
 
-		<h2>Pain points uncovered from user research</h2>
+		<h3>Pain points uncovered from user research</h3>
 		<p>The old booking workflow was:</p>
 		<ul>
 			<li>A 20+ step process to generate 2 contracts.</li>
@@ -136,15 +138,16 @@
 		<div class="space"></div>
 		<div class="full-width-mid-page">
 			<div class="panel dark" style="text-align: center; background-color: #E5E5E5;">
-				<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">A peek at the deeply confusing old workflow that is not worth explaining:</div>
+				<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">The old workflow was 20+ steps, most of which were meaningless legacy functionality</div>
 				<img class="pic-left" src="pics/booking/old-flow.png">
 			</div>
 		</div>
 
 		<div class="space"></div>
 
-		<h2>Project scoping & requirements</h2>
-		<h3>High-level goals</h3>
+		<h3>Project scoping & requirements</h3>
+		<div class="space"></div>
+		<h4>High-level goals</h4>
 		<ul>
 			<li>All booking contracts can be sent within 2 minutes.</li>
 			<li>Internal users are able to reference the latest contract status and amendments through one designated module.</li>
@@ -152,7 +155,7 @@
 
 		<div class="space"></div>
 
-		<h3>Success metrics</h3>
+		<h4>Success metrics</h4>
 		<ul>
 			<li>Speed - All booking contracts can be sent within 2 minutes AND without depending on another team.</li>
 			<li>Booking rates - If booking docs are always sent during consultations, more customers may book then & there.</li>
@@ -189,9 +192,9 @@
 		</ul>
 
 		<div class="space"></div>
-		<h2>Rollout & outcome</h2>
+		<h3>Rollout & outcome</h3>
 		<p>To ensure a smooth rollout, my PM and I organized 2 training sessions + optional office hours for SAs, and set up a Slack channel for feedback and questions.</p>
-		<p>Release is scheduled for Nov 1 - we expect the new flow to improve booking rates, increase visibility, and shorten consultation times.</p>
+		<p>This was released Nov 1 - we expect the new flow to improve booking rates, increase visibility, and shorten consultation times.</p>
 
 	</div>
 
