--- a/homeshopping.html
+++ b/homeshopping.html
@@ -57,7 +57,7 @@
 				<h2>Overview</h2>
 
 				<p class="p-XL">
-					I led research & design for a new home shopping dashboard & related tools that improved agent efficiency, tooling satisfaction, and will reduce external tool licensing costs.
+					I led research & design for a new home shopping dashboard & related tools that improved agent efficiency, tooling satisfaction, and reduced external tool licensing costs.
 				</p>
 
 				<div class="space"></div>
@@ -127,7 +127,7 @@
 				<h3>Primary users</h3>
 				<p>
 					<ul>
-						<li>Home Advisors (HAs) are licensed real estate agents who work on the “buy side” of a transaction (aka shopping for and purchasing their new home). </li>
+						<li>Home Advisors (HAs) are licensed real estate agents who work on the “buy side” of a transaction (aka shopping for and purchasing a home). </li>
 						<li>HAs spend 20-30% of their time in the field meeting with customers for home tours and closings and the rest of their time doing computer work — writing contracts and checking in with customers.</li>
 					</ul>
 				</p>
