--- a/index.html
+++ b/index.html
@@ -63,9 +63,19 @@ $('#footer').load('https://emilyporat.com/footer.html');
 
   <div class="section-large" style="background-color: white">  
     <div class="project-info-large">
-      <h4 style="margin-bottom: 15px;">Orchard • 2023 • Research & Design</h4>
+      <h4 style="margin-bottom: 15px;">Orchard • 2023 • Research & Design • 0 → 1 </h4>
+      <h3>Home Shopping</h3>
+      <p>Launched a net-new dashboard to better support Orchard’s internal agents in managing their pipeline of home-buyers.</p>
+      <p><a href="homeshopping.html">Learn more →</a></p>
+    </div>
+    <img class="project-pic-large" src="pics/homeshopping/hs.png">
+  </div>
+
+  <div class="section-large" style="background-color: white">  
+    <div class="project-info-large">
+      <h4 style="margin-bottom: 15px;">Orchard • 2023 • Research & Design • Redesign</h4>
       <h3>Customer booking workflow</h3>
-      <p>Sped up the customer booking experience 10x by simplifying the workflow, automating key steps, and removing dependencies from other teams.</p>
+      <p>Sped up the workflow 10x by simplifying data requirements, automating key steps, and removing dependencies from other teams.</p>
       <p><a href="booking.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/booking/main-1.png">
@@ -81,22 +91,12 @@ $('#footer').load('https://emilyporat.com/footer.html');
     <img class="project-pic-large" src="pics/roadmap.png">
   </div>
 
-  <div class="section-large" style="background-color: white">  
-    <div class="project-info-large">
-      <h4 style="margin-bottom: 15px;">Orchard • 2023 • Research & Design</h4>
-      <h3>Home Shopping</h3>
-      <p>Consolidated existing tooling into a net-new dashboard to better support Orchard’s internal agents in managing their pipeline of home-buyers.</p>
-      <p><a href="homeshopping.html">Learn more →</a></p>
-    </div>
-    <img class="project-pic-large" src="pics/homeshopping/hs.png">
-  </div>
-
 
   <div class="section-large" style="background-color: white">  
     <div class="project-info-large">
-      <h4 style="margin-bottom: 15px;">Orchard • 2022 • Research & Design</h4>
+      <h4 style="margin-bottom: 15px;">Orchard • 2022 • Research & Design • 0 → 1</h4>
       <h3>Concierge</h3>
-      <p>Designed product support for Orchard's "Concierge" renovation program — including project planning, generating smart contracts, and sending invoices.</p>
+      <p>Introduced product support for Orchard's "Concierge" renovation program — including project planning, generating smart contracts, and sending invoices.</p>
       <p><a href="concierge.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/concierge.png">
