--- a/homeshopping.html
+++ b/homeshopping.html
@@ -35,12 +35,12 @@
 	<div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-	<div class="full-width" style="background-color: #6554CC; color: white">
+	<div class="full-width" style="background-color: #DDD9F7">
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
 					<h4>Orchard • 2023</h4>
-					<h1 style="color: white">Home shopping</h1>
+					<h1>Home shopping</h1>
 					<p class="p-XL">Improved internal real estate tooling and introduced new home shopping dashboard + customer activity feed.</p>
 				</div>
 			</div>
