--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@ $('#footer').load('https://emilyporat.com/footer.html');
             <div>
               <h4 style="margin-bottom: 20px; text-align: center;">The Design Portfolio of</h4>
               <h1 style="text-align: center; margin-bottom: 20px; color: black">Emily Porat</h1>
-              <p class=p-XL style="margin-bottom: 10px; text-align: center">Senior Product Designer at <a style="color: black" href="https://orchard.com/">Orchard</a> in NYC · designing enterprise tools for complex systems</p>
-              
+              <p class=p-XL style="margin-bottom: 10px; text-align: center">End-to-end Senior Product Designer in NYC focused on designing enterprise tools for complex systems</p>
             </div>
           </div>
         </div>
@@ -59,13 +58,15 @@ $('#footer').load('https://emilyporat.com/footer.html');
 
       </div>
 
+
+
 <div id="projects">
 
   <div class="section-large" style="background-color: white">  
     <div class="project-info-large">
-      <h4 style="margin-bottom: 15px;">Orchard • 2023 • Research & Design • 0 → 1 </h4>
+      <h4 style="margin-bottom: 15px;">Orchard • 2023 • Research & Design</h4>
       <h3>Home Shopping</h3>
-      <p>Launched a net-new dashboard to better support Orchard’s internal agents in managing their pipeline of home-buyers.</p>
+      <p>Built a net-new dashboard that improved insight into customer behavior, increasing user satisfaction 26% and saving $1000s in Salesforce licensing costs.</p>
       <p><a href="homeshopping.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/homeshopping/hs.png">
@@ -73,7 +74,7 @@ $('#footer').load('https://emilyporat.com/footer.html');
 
   <div class="section-large" style="background-color: white">  
     <div class="project-info-large">
-      <h4 style="margin-bottom: 15px;">Orchard • 2023 • Research & Design • Redesign</h4>
+      <h4 style="margin-bottom: 15px;">Orchard • 2023 • Research & Design</h4>
       <h3>Customer booking workflow</h3>
       <p>Sped up the workflow 10x by simplifying data requirements, automating key steps, and removing dependencies from other teams.</p>
       <p><a href="booking.html">Learn more →</a></p>
@@ -92,7 +93,7 @@ $('#footer').load('https://emilyporat.com/footer.html');
   </div>
 
 
-  <div class="section-large" style="background-color: white">  
+<!--   <div class="section-large" style="background-color: white">  
     <div class="project-info-large">
       <h4 style="margin-bottom: 15px;">Orchard • 2022 • Research & Design • 0 → 1</h4>
       <h3>Concierge</h3>
@@ -101,7 +102,7 @@ $('#footer').load('https://emilyporat.com/footer.html');
     </div>
     <img class="project-pic-large" src="pics/concierge.png">
   </div>
-
+ -->
 
 <!--   <div class="section-large" style="background-color: white">  
     <div class="project-info-large">
