--- a/booking.html
+++ b/booking.html
@@ -69,7 +69,7 @@
 					</div>
 
 					<div class="context-description">
-						<h4>Duratin</h4>
+						<h4>Duration</h4>
 						<p>5 months</p>
 					</div>
 
