--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ $('#footer').load('https://emilyporat.com/footer.html');
     <div class="project-info-large">
       <h4 style="margin-bottom: 15px;">Orchard • 2023 • Research & Design</h4>
       <h3>Home Shopping</h3>
-      <p>Built a net-new dashboard that improved insight into customer behavior, increasing user satisfaction 26% and saving $1000s in Salesforce licensing costs.</p>
+      <p>Built a net-new dashboard that improved insight into customer behavior, increased user satisfaction 26%, and saved $1000s in Salesforce licensing costs.</p>
       <p><a href="homeshopping.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/homeshopping/hs.png">
