--- a/index.html
+++ b/index.html
@@ -42,13 +42,24 @@ $('#footer').load('https://emilyporat.com/footer.html');
 <meta name="viewport" content="width=device-width">
 <div id="nav"></div>
 
-      <div class="full-width" style="background-color: var(--white); margin-bottom: 0; height: 95vh">
-        <div class="title-wrapper animate-reveal animate-first" style="height: 95vh;">
+      <div class="full-width" style="background-color: var(--darkgray); color: white; margin-bottom: 0; height: 90vh">
+        <div class="title-wrapper animate-reveal animate-first" style="height: 90vh;">
           <div class="home-title">
             <div>
-              <h4 style="margin-bottom: 20px; text-align: center;">The Design Portfolio of</h4>
-              <h1 style="text-align: center; margin-bottom: 20px; color: black">Emily Porat</h1>
-              <p class=p-XL style="margin-bottom: 10px; text-align: center">End-to-end Senior Product Designer in NYC focused on designing enterprise tools for complex systems</p>
+<!--               <h4 style="margin-bottom: 20px; text-align: left;">Design Portfolio of</h4> -->
+              
+              
+              <h1 style="text-align: left; margin-bottom: 20px; color: white">Emily Porat</h1>
+              <h3 style="margin-bottom: 10px; text-align: left">End-to-end Senior Product Designer with 5 years of experience designing delightful enterprise tools for complex systems.</h3>
+              <p class="p-XL">Formerly @ <a href="https://orchard.com/" target="_blank">Orchard</a> and <a href="https://www.deloittedigital.com/" target="_blank"> Deloitte Digital</a>.</p>
+              <div class="space"></div>
+              <img src="pics/status.png" style="width: 300px">
+
+<!--               <div class="so-what" style="background-color: rgba(154, 245, 65, .1); border: 1px solid #9AF53E;">
+                <h4>🟢 Open to new opportunities!</h4>
+                <p>Reach out via <a href="mailto:emporat@gmail.com" target="_top">email</a> or <a href="https://www.linkedin.com/in/emilyporat/" target="_blank">LinkedIn</a> to connect.</p>
+              </div>  -->
+
             </div>
           </div>
         </div>
