--- a/about.html
+++ b/about.html
@@ -37,12 +37,12 @@
       <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-      <div class="full-width" style="background-color: white; height: 30vh;">
+      <div class="full-width" style="background-color: var(--darkgray); height: 30vh;">
         <div class="title-wrapper animate-reveal animate-first" style="height: 30vh;">
           <div class="title" style="width: 54%; padding-left: 23%; padding-right: 23%">
             <div>
-              <h1 style="color: black; margin-bottom: 5px">About Emily</h1>
-              <div class="p-XL" style="color: black">Hey! I'm Emily. I'm an NYC-based product designer.</div>
+              <h1 style="color: white; margin-bottom: 5px">About Emily</h1>
+              <div class="p-XL" style="color: white">Hey! I'm Emily. I'm an NYC-based product designer.</div>
             </div>
           </div>
         </div>
@@ -59,7 +59,7 @@
             Hey! I'm Emily. I'm an NYC-based product designer.
           </p> -->
 
-          <p>I most recently worked at <a href="https://orchard.com/">Orchard</a>, a real estate startup that offers streamlined services and tooling for consumers looking to buy and/or sell their home. I led design on our Platform team, which supports all internal tooling for Orchard's agents and operations teams. In my 2+ years at Orchard, I worked on projects big & small, from redesigning a global search feature to overhauling our entire platform design system to introducing net-new customer management dashboards.</p>
+          <p>Most recently, I worked at <a href="https://orchard.com/">Orchard</a>, a real estate startup that offers streamlined services and tooling for consumers looking to buy and/or sell their home. I led design on our Platform team, which supports all internal tooling for Orchard's agents and operations teams. In my 2+ years at Orchard, I worked on projects big & small, from redesigning a global search feature to overhauling our entire platform design system to introducing net-new customer management dashboards.</p>
 
           <div  class="space"></div>
 
