--- a/booking.html
+++ b/booking.html
@@ -57,7 +57,7 @@
 				<h2>Overview</h2>
 
 				<p class="p-XL">
-					Reduced the time it takes Orchard sales reps to generate booking contracts from 15-30 minutes to 2 minutes.
+					Sped up the customer booking contract generation workflow 10x by simplifying data requirements, automating key steps, and removing dependencies from other teams.
 				</p>
 
 				<div class="space"></div>
