--- a/homeshopping.html
+++ b/homeshopping.html
@@ -57,7 +57,7 @@
 				<h2>Overview</h2>
 
 				<p class="p-XL">
-					I led research & design for a new home shopping dashboard & related tools that improved agent efficiency, tooling satisfaction, and reduced external tool licensing costs.
+					I led research & design for a new home shopping dashboard & related tools that improved insight into customer behavior, increasing user satisfaction 26% and saving $1000s in Salesforce licensing costs.
 				</p>
 
 				<div class="space"></div>
