--- a/index.html
+++ b/index.html
@@ -73,11 +73,16 @@ $('#footer').load('https://emilyporat.com/footer.html');
 
 <div id="projects">
 
-  <div class="section-large" style="background-color: white">  
+
+  <h4 style="text-align: center;">Featured projects</h4>
+  <div class="space"></div>
+  <div class="space"></div>
+
+  <div class="section-large" style="background-color: #6554CC">  
     <div class="project-info-large">
-      <h4 style="margin-bottom: 15px;">Orchard • 2023 • Research & Design</h4>
-      <h3>Home Shopping</h3>
-      <p>Built a net-new dashboard that improved insight into customer behavior, increased user satisfaction 26%, and saved $1000s in Salesforce licensing costs.</p>
+      <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Orchard • 2023 • Research & Design</h4>
+      <h2>Home shopping dashboard</h2>
+      <h3 style="color: var(--mediumgray)">Helped real estate agents gain better insight into customer behavior & motivations.</h3>
       <p><a href="homeshopping.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/homeshopping/hs.png">
@@ -85,9 +90,9 @@ $('#footer').load('https://emilyporat.com/footer.html');
 
   <div class="section-large" style="background-color: white">  
     <div class="project-info-large">
-      <h4 style="margin-bottom: 15px;">Orchard • 2023 • Research & Design</h4>
-      <h3>Customer booking workflow</h3>
-      <p>Sped up the workflow 10x by simplifying data requirements, automating key steps, and removing dependencies from other teams.</p>
+      <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Orchard • 2023 • Research & Design</h4>
+      <h2>Customer booking workflow</h2>
+      <h3 style="color: var(--mediumgray)">Enabled sales teams to generate booking contracts 10x faster.</h3>
       <p><a href="booking.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/booking/main-1.png">
@@ -95,9 +100,9 @@ $('#footer').load('https://emilyporat.com/footer.html');
 
   <div class="section-large" style="background-color: white">  
     <div class="project-info-large">
-      <h4 style="margin-bottom: 15px;">Orchard • 2022 • Vision & Strategy</h4>
-      <h3>Orchard platform product vision</h3>
-      <p>Collaborated with product to define a vision and 2023 roadmap to integrate our 3 platform tools into one unified product experience.</p>
+      <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Orchard • 2022 • Vision & Strategy</h4>
+      <h2>Platform product vision</h2>
+      <h3 style="color: var(--mediumgray)">Defined a UX vision and 2023 roadmap to integrate 3 platform tools into one unified product experience.</h3>
       <p><a href="orchard-roadmap.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/roadmap.png">
@@ -128,9 +133,9 @@ $('#footer').load('https://emilyporat.com/footer.html');
 
     <div class="section-large" style="background-color: white">
       <div class="project-info-large">
-        <h4 style="margin-bottom: 10px;">Deloitte Digital • 2020 • Research & Design</h4>
-        <h3>Inventory management system</h3>
-        <p>Designed the inventory management & point of sale system that a government client uses to distribute food to nearly 100,000 low-income individuals.</p>
+        <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Deloitte Digital • 2020 • Research & Design</h4>
+        <h2>Inventory management system</h2>
+        <h3 style="color: var(--mediumgray)">Streamlined the food distribution checkout process for 100,000+ low-income individuals.</h3>
         <p><a href="fms-pos.html">Learn more →</a></p>
       </div>
       <img class="project-pic-large" src="pics/pos-small.png" alt="A screenshot of a point of sale system on a Salesforce desktop interface and an iPad interface">
