--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ $('#footer').load('https://emilyporat.com/footer.html');
 <div id="projects">
 
 
-  <h4 style="text-align: center;">Featured projects</h4>
+  <h4 style="text-align: center; color: var(--mediumgray)">Featured projects</h4>
   <div class="space"></div>
   <div class="space"></div>
 
