updated booking content

--- a/booking.html
+++ b/booking.html
@@ -41,7 +41,7 @@
 				<div>
 					<h4>Orchard • 2023</h4>
 					<h1 style="color: black">Customer booking workflow</h1>
-					<p class="p-XL">Led research & design for a simplified, faster customer booking workflow.</p>
+					<h3>Enabled sales teams to generate booking contracts 10x faster.</h3>
 				</div>
 			</div>
 		</div> 
@@ -59,6 +59,8 @@
 				<p class="p-XL">
 					Sped up the customer booking contract generation workflow 10x by simplifying data requirements, automating key steps, and removing dependencies from other teams.
 				</p>
+
+				<p><a href="#final-design">Jump to final designs →</a></p>
 
 				<div class="space"></div>
 
@@ -114,89 +116,132 @@
 				<p>The new workflow was released on Nov 1. We expect the new flow to improve booking rates, increase visibility, and shorten consultation times.
 				</p>
 
-		</div>
+				<div class="space"></div>
 
-		<h2>High-level process</h2>
-		<ul>
-			<li>Research: shadowing, manager interviews, baseline survey to evaluate satisfaction</li>
-			<li>Scoping: defined goals + success metrics of the project and collaborated with eng, product, and legal team to define the data requirements</li>
-			<li>Design: low-fi user flows (established a new contract generation pattern), mid-fi prototypes, final design</li>
-			<li>Release: QA testing, training internal users, monitoring for feedback & issues</li>
-		</ul>
-
-		<div class="space"></div>
-
-		<h3>Pain points uncovered from user research</h3>
-		<p>The old booking workflow was:</p>
-		<ul>
-			<li>A 20+ step process to generate 2 contracts.</li>
-			<li>Involves many legacy steps that are now meaningless.</li>
-			<li>Typically occurs during a live call with a customer — SA is trying generate these contracts and make small talk at the same time.</li>
-			<li>Requires reaching out to our Transaction Operations team to complete & send out one of the contracts (which can take up to 30 mins).</li>
-			<li>Once sent, there wasn’t one clear place to view the contract statuses or make updates to them.</li>
-		</ul>
-		<div class="space"></div>
-		<div class="full-width-mid-page">
-			<div class="panel dark" style="text-align: center; background-color: #E5E5E5;">
-				<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">The old workflow was 20+ steps, most of which were meaningless legacy functionality</div>
-				<img class="pic-left" src="pics/booking/old-flow.png">
+				<div class="highlight-box" style="background-color: #D0F2FF">
+					<h3>Contribution summary</h3>
+					<div class="space"></div>
+					<div class="box-1">
+						<h4>I owned:</h4>
+						<ul>
+							<li>User research</li>
+							<li>Prototyping new user flows for existing patterns</li>
+							<li>Low-to-hi fidelity UX/UI design</li>
+							<li>Concept & usability testing</li>
+							<li>Design system revamp</li>
+						</ul>
+					</div>
+					<div class="box-2">
+						<h4>Co-owned with PM</h4>
+						<ul>
+							<li>Validating data requirements w/ legal + eng</li>
+							<li>Stakeholder management</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</div>
 
-		<div class="space"></div>
-
-		<h3>Project scoping & requirements</h3>
-		<div class="space"></div>
-		<h4>High-level goals</h4>
-		<ul>
-			<li>All booking contracts can be sent within 2 minutes.</li>
-			<li>Internal users are able to reference the latest contract status and amendments through one designated module.</li>
-		</ul>
-
-		<div class="space"></div>
-
-		<h4>Success metrics</h4>
-		<ul>
-			<li>Speed - All booking contracts can be sent within 2 minutes AND without depending on another team.</li>
-			<li>Booking rates - If booking docs are always sent during consultations, more customers may book then & there.</li>
-			<li>Consult volume - If we can shorten consults by 15 mins, that frees up SA time to take on more consults per day and improves scheduling availability.</li>
-			<li>Labor costs savings - Removing the contract generation task from the other team enables us to utilize that team’s time on other work instead.</li>
-			<li>Tooling satisfaction - Improve SA efficiency and general happiness with tooling.</li>
-		</ul>
-
-		<div class="space"></div>
-		<div class="space"></div>
-
-		<div class="full-width-mid-page">
-			<div class="panel dark" style="text-align: center; background-color: white;">
-				<h3 style="padding-top: 100px; color: black;">Designing the new workflow</h3>
-				<div class=p-XL style="padding-top: 10px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">I started by evaluating the existing form that users filled out to generate the Guaranteed Offer Purchase Agreement today.</div>
-				<img class="pic-left" src="pics/booking/old-form.png">
-				<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Then, I mapped out a high-level workflow for the new process.</div>
-				<img class="pic-left" src="pics/booking/workflow.png">
-				<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Next, I created a set of prototypes exploring different interaction patterns. </div>
-				<p style="padding-top: 10px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">The prototype below shows a flow where the contract generation opens in a new tab. We later decided it would be more fluid to open the contract form in-place even though that form technically lived in a separate tool.</p>
-				<img class="pic-left" src="pics/booking/prototype.gif">
-				<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Last, I aligned with my team on a final design flow (4 steps instead of 20!)</div>
-				<img class="pic-left" src="pics/booking/final-flow.png">
-				<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Here's a closer look at the new & improved contract generation form:</div>
-				<img class="pic-left" src="pics/booking/final.png">
-			</div>
+	<div class="divider" style="background-color: #0DA7E1"></div>
+	
+	<div class="panel">
+		<div class="body right">
+				<H2>How might we...</H2>
+				<p class="p-XL">speed up contract generation in order to remove friction from the booking experience?</p>
 		</div>
-
-		<h3>Validating the design</h3>
-		<ul>
-			<li>At each step, I presented the designs/prototypes to our tech lead and/or entire eng team to ensure what I was proposing was technically feasible.</li>
-			<li>Myself and my PM had weekly check-ins with a stakeholder group including an SA manager to review designs and ensure everything was making sense.</li>
-			<li>I also ran a few separate concept review sessions with individual Service Advisors once we aligned on a final flow.</li>
-		</ul>
-
-		<div class="space"></div>
-		<h3>Rollout & outcome</h3>
-		<p>To ensure a smooth rollout, my PM and I organized 2 training sessions + optional office hours for SAs, and set up a Slack channel for feedback and questions.</p>
-		<p>This was released Nov 1 - we expect the new flow to improve booking rates, increase visibility, and shorten consultation times.</p>
 
 	</div>
+
+	<div class="divider" style="background-color: #0DA7E1"></div>
+
+	<div class="panel">
+		<div class="body right">
+
+		<h2>Process</h2>
+			<p class="p-XL">This project had clear goals upfront, but a lot of technical complexity because it required rethinking existing contract generation patterns.</p>
+
+			<div class="space"></div>
+			<h3>Key activities:</h3>
+			<ul>
+				<li>Research: shadowing, manager interviews, baseline survey to evaluate satisfaction</li>
+				<li>Scoping: defined goals + success metrics of the project and collaborated with eng, product, and legal team to define the data requirements</li>
+				<li>Design: low-fi user flows (established a new contract generation pattern), mid-fi prototypes, final design</li>
+				<li>Release: QA testing, training internal users, monitoring for feedback & issues</li>
+			</ul>
+
+			<div class="space"></div>
+
+			<h3>Pain points uncovered from user research</h3>
+			<p>The old booking workflow was:</p>
+			<ul>
+				<li>A 20+ step process to generate 2 contracts.</li>
+				<li>Involves many legacy steps that are now meaningless.</li>
+				<li>Typically occurs during a live call with a customer — SA is trying generate these contracts and make small talk at the same time.</li>
+				<li>Requires reaching out to our Transaction Operations team to complete & send out one of the contracts (which can take up to 30 mins).</li>
+				<li>Once sent, there wasn’t one clear place to view the contract statuses or make updates to them.</li>
+			</ul>
+			<div class="space"></div>
+			<div class="full-width-mid-page">
+				<div class="panel dark" style="text-align: center; background-color: #E5E5E5;">
+					<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">The old workflow was 20+ steps, most of which were meaningless legacy functionality</div>
+					<img class="pic-left" src="pics/booking/old-flow.png">
+				</div>
+			</div>
+
+			<div class="space"></div>
+
+			<h3>Project scoping & requirements</h3>
+			<div class="space"></div>
+			<h4>High-level goals</h4>
+			<ul>
+				<li>All booking contracts can be sent within 2 minutes.</li>
+				<li>Internal users are able to reference the latest contract status and amendments through one designated module.</li>
+			</ul>
+
+			<div class="space"></div>
+
+			<h4>Success metrics</h4>
+			<ul>
+				<li>Speed - All booking contracts can be sent within 2 minutes AND without depending on another team.</li>
+				<li>Booking rates - If booking docs are always sent during consultations, more customers may book then & there.</li>
+				<li>Consult volume - If we can shorten consults by 15 mins, that frees up SA time to take on more consults per day and improves scheduling availability.</li>
+				<li>Labor costs savings - Removing the contract generation task from the other team enables us to utilize that team’s time on other work instead.</li>
+				<li>Tooling satisfaction - Improve SA efficiency and general happiness with tooling.</li>
+			</ul>
+
+			<div class="space"></div>
+			<div class="space"></div>
+
+			<div class="full-width-mid-page">
+				<div class="panel dark" style="text-align: center; background-color: white;">
+					<h3 style="padding-top: 100px; color: black;">Designing the new workflow</h3>
+					<div class=p-XL style="padding-top: 10px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">I started by evaluating the existing form that users filled out to generate the Guaranteed Offer Purchase Agreement today.</div>
+					<img class="pic-left" src="pics/booking/old-form.png">
+					<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Then, I mapped out a high-level workflow for the new process.</div>
+					<img class="pic-left" src="pics/booking/workflow.png">
+					<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Next, I created a set of prototypes exploring different interaction patterns. </div>
+					<p style="padding-top: 10px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">The prototype below shows a flow where the contract generation opens in a new tab. We later decided it would be more fluid to open the contract form in-place even though that form technically lived in a separate tool.</p>
+					<img class="pic-left" src="pics/booking/prototype.gif">
+					<div class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Last, I aligned with my team on a final design flow (4 steps instead of 20!)</div>
+					<img class="pic-left" src="pics/booking/final-flow.png">
+					<div id="final-design" class=p-XL style="padding-top: 100px; color: black; padding-left: 20%; padding-right: 20%; width: 60%">Here's a closer look at the new & improved contract generation form:</div>
+					<img class="pic-left" src="pics/booking/final.png">
+				</div>
+			</div>
+
+			<h3>Validating the design</h3>
+			<ul>
+				<li>At each step, I presented the designs/prototypes to our tech lead and/or entire eng team to ensure what I was proposing was technically feasible.</li>
+				<li>Myself and my PM had weekly check-ins with a stakeholder group including an SA manager to review designs and ensure everything was making sense.</li>
+				<li>I also ran a few separate concept review sessions with individual Service Advisors once we aligned on a final flow.</li>
+			</ul>
+
+			<div class="space"></div>
+			<h3>Rollout & outcome</h3>
+			<p>To ensure a smooth rollout, my PM and I organized 2 training sessions + optional office hours for SAs, and set up a Slack channel for feedback and questions.</p>
+			<p>This was released Nov 1 - we expect the new flow to improve booking rates, increase visibility, and shorten consultation times.</p>
+
+		</div>
 
 
 
@@ -208,9 +253,9 @@
         		<p>Please <a href="mailto:emporat@gmail.com" target="_top">reach out directly</a> and I can share more details and designs.</p>
         	</div>  -->
 
+					</div>
+				</div>
 			</div>
-
-
 		</div>
 	</div>
 	  	
