--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ $('#footer').load('https://emilyporat.com/footer.html');
     <div class="project-info-large">
       <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Orchard • 2023 • Research & Design</h4>
       <h2>Home shopping dashboard</h2>
-      <h3 style="color: var(--mediumgray)">Helped real estate agents gain better insight into customer behavior & motivations.</h3>
+      <h3 style="color: var(--mediumgray)">Equipped real estate agents with clearer insights into customer behavior & motivations.</h3>
       <p><a href="homeshopping.html">Learn more →</a></p>
     </div>
     <img class="project-pic-large" src="pics/homeshopping/hs.png">
