--- a/orchard-roadmap.html
+++ b/orchard-roadmap.html
@@ -41,7 +41,7 @@
 				<div>
 					<h4 style="margin-bottom: 10px">Orchard • 2022-23</h4>
 					<h1 style="color: black">Product vision</h1>
-					<p class="p-XL">Collaborated with product to define a vision and roadmap to integrate our 3 platform tools into one unified product experience.</p>
+					<h3>Defined a UX vision and 2023 roadmap to integrate 3 platform tools into one unified product experience.</h3>
 				</div>
 			</div>
 		</div> 
@@ -59,6 +59,8 @@
 				<p class="p-XL">
 					Partnered with a PM to define a UX vision + 2023 product roadmap for better integrating Orchard's 3 primary platform products (Salesforce, Atlas, Deal Hub) following the acqusition of a smaller company.
 				</p>
+
+				<p><a href="#outcome">Jump to outcome →</a></p>
 				
 				<div class="space"></div>
 
@@ -122,7 +124,8 @@
 					<ul>
 						<li>Before this initiative kicked off, I led a cross-functional group in defining unique design principles for the platform - these were meant to aid in decision-making and summarize what sets apart Orchard's internal tools.</li>
 						<li>My PM partner and I launched a "Listening Tour," conducting 30+ user interviews, covering all platform user groups, so that we had a clear picture of job responsibilities, current tool usage, and primary pain points.</li>
-						<li>We synthesized those findings and used our insights to feed into a formal UX vision + product roadmap for 2023.</li>
+						<li>We also held several workshops with various platform team leads to solicit feedback on the strengths + weaknesses of each of our tools.</li>
+						<li>We synthesized listening tour findings + stakeholder feedback and used our insights to feed into a formal UX vision + product roadmap for 2023.</li>
 						<li>We presented our UX vision + roadmap to the entire platform Product-Design-Eng team and high-level leadership to get buy-in.</li>
 					</ul>
 				</p>
@@ -169,7 +172,7 @@
 				</div>
 			</div>
 
-			<h3>Outcome</h3>
+			<h3 id="outcome">Outcome</h3>
 			<p>
 				<ul>
 					<li>Over the course of 2023, we deprecated irrelevant legacy content and functionality in Atlas and Salesforce and gradually moved it into Deal Hub. We gave most internal roles access to Deal Hub and transitioned them to it as their primary tool.</li>
