--- a/homeshopping.html
+++ b/homeshopping.html
@@ -41,7 +41,7 @@
 				<div>
 					<h4>Orchard • 2023</h4>
 					<h1>Home shopping</h1>
-					<h3>Helped real estate agents gain better insight into customer behavior & motivations.</h3>
+					<h3>Equipped real estate agents with clearer insights into customer behavior & motivations.</h3>
 				</div>
 			</div>
 		</div> 
