updated USDA desc

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@ $('#footer').load('https://emilyporat.com/footer.html');
     <div class="section-large" style="background-color: white">
       <div class="project-info-large">
         <h4 style="margin-bottom: 15px; color: var(--mediumgray)">Deloitte Digital • 2020 • Research & Design</h4>
-        <h2>Inventory management system</h2>
-        <h3 style="color: var(--mediumgray)">Streamlined the food distribution checkout process for 100,000+ low-income individuals.</h3>
+        <h2>Food management system</h2>
+        <h3 style="color: var(--mediumgray)">Streamlined the USDA's point of sale and inventory management system, supporting affordable food access for 100,000+ low-income individuals.</h3>
         <p><a href="fms-pos.html">Learn more →</a></p>
       </div>
       <img class="project-pic-large" src="pics/pos-small.png" alt="A screenshot of a point of sale system on a Salesforce desktop interface and an iPad interface">
