removed open to work status HELL YEAH

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ $('#footer').load('https://emilyporat.com/footer.html');
               <h3 style="margin-bottom: 10px; text-align: left">End-to-end Senior Product Designer with 5 years of experience designing delightful enterprise tools for complex systems.</h3>
               <p class="p-XL">Formerly @ <a href="https://orchard.com/" target="_blank">Orchard</a> and <a href="https://www.deloittedigital.com/" target="_blank"> Deloitte Digital</a>.</p>
               <div class="space"></div>
-              <img src="pics/status.png" style="width: 300px">
+              <!-- <img src="pics/status.png" style="width: 300px"> -->
 
 <!--               <div class="so-what" style="background-color: rgba(154, 245, 65, .1); border: 1px solid #9AF53E;">
                 <h4>🟢 Open to new opportunities!</h4>
