updated meta description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>Emily Porat | Portfolio</title>
-<meta name="description" content="Emily Porat's Portfolio | UX/UI | Development | Technology Consulting | Emily Porat is a UX Designer at Deloitte Digital">
+<meta name="description" content="Emily Porat's Portfolio | Emily Porat is a UX Designer at Hightouch">
 <meta name="keywords" content="Emily Porat, Emily Porat Design, Deloitte, Deloitte Digital, Deloitte UX, Deloitte Digital UX, Emily Porat Deloitte, Emily Porat Deloitte UX, Carnegie Mellon University, Emily Porat CMU, Emily Porat Carnegie Mellon, Emily Porat Carnegie Mellon University, Porat, Emily CMU, Porat CMU, Emily Porat UX, Emily Porat User Experience Design, User Experience Design, UX">
 <meta name="author" content="Emily Porat">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
